--- a/index.css
+++ b/index.css
@@ -2,23 +2,22 @@ body{
     display:grid;
     grid-template: 150px repeat(6, 300px) 150px/repeat(3, auto);
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #F4EEE0;
     gap:0.7rem;
+    margin: 0;
 }
 /*todo lo relacionado al header*/
 header{
     display: flex;
     flex-flow:column;
+    align-items: center;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 1;
-    background-image: url(pics/fondoheader2.jpg);
-    background-attachment: fixed;
+    background-color: #2E4F4F;
     color: aliceblue;
-    border-radius: 7px;
 }
 .parth-1 h1:first-letter{
-    color:blue;
+    color: rgba(0, 0, 255, 0.5);;
 }
 .parth-1{
     flex-grow: 2;
@@ -30,14 +29,14 @@ header{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #CBE4DE;
 }
 .parth-2 li{
     float:left;
 }
 .itul a{
     display: block;
-    color: white;
+    color:#2C3333;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -53,19 +52,14 @@ main{
     grid-row-start: 2;
     grid-row-end: 7;
     border-radius: 7px;
+    border: 1px solid black;
 }
-main section:nth-child(1){
-    background-color:#333;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    border-radius: 7px;
-    height: 20%;
-}
+
 
 /*generalidades de los titulos*/
 .tit{
     text-align: center;
 }
 .bgb{
-    background-color: rgba(0, 0, 255, 0.781);
+    background-color: rgba(0, 0, 255, 0.5);
 }
