--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 body{
     display:grid;
     grid-template: 150px 300px 1500px 150px/repeat(3, auto);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     gap:0.7rem;
     margin: 0;
     background-color: black;
@@ -76,6 +75,9 @@ main{
     grid-row-start: 3;
     border-radius: 7px;
     margin: 1rem;
+    gap: 1rem;
+    margin:0;
+    padding: 0;
 }
 main section:nth-child(1){
     display: flex;
@@ -89,6 +91,7 @@ main section:nth-child(1){
     grid-row-start: 1;
     grid-row-end: 2;
     border-radius: 7px;
+    margin:1rem;
 }
 .textsection1{
     color: white;
@@ -97,16 +100,44 @@ main section:nth-child(1){
     font-style: italic;
     padding: 4rem;
 }
-.main section:nth-child(2){
+main section:nth-child(2){
+    display: grid;
+    grid-template: 3rem 25% 1fr/ 50% 15% 1fr;
+    padding: 1rem;
+    font-size: large;
+    font-style: italic;
     color: white;
-    background-color: white;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-
 }
-
+.imgsection2{
+    width: 100%;
+    margin-right:15% ;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    border-radius: 5%;
+}
+.textsection2{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.titsection2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+main section:nth-child(2) img:hover{
+    border-top:5px solid white;
+    border-bottom:5px solid white;
+    transition: 0.5s;
+}
 
 /*generalidades de los titulos*/
 .tit{
