--- a/index.css
+++ b/index.css
@@ -69,19 +69,17 @@ header{
 /*todo lo relacionado al main*/
 main{
     display:grid;
-    grid-template: 500px 600px 600px repeat(2, auto)/auto auto;
+    grid-template: 300px 600px 600px repeat(2, auto)/auto auto;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 3;
     color:white;
     border-radius: 7px;
-    margin: 1rem;
-    gap: 4rem;
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 main section:nth-child(1){
-    height: 200px;
+    height: 70%;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -93,7 +91,6 @@ main section:nth-child(1){
     grid-row-start: 1;
     grid-row-end: 2;
     border-radius: 7px;
-    margin:150px;
     margin-left: 1rem;
     margin-right: 1rem;
 }
@@ -102,7 +99,7 @@ main section:nth-child(1){
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size:large;
     font-style: italic;
-    padding: 4rem;
+    padding: 1rem;
 }
 main section:nth-child(2){
     display: grid;
@@ -144,13 +141,12 @@ main section:nth-child(2) img:hover{
 main section:nth-child(3){
     display: grid;
     grid-template: 10% 90%/auto;
-    margin-top: 3%;
+    margin-top: 1%;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 3;
-    gap: 5%;
+    row-gap: 5%;
     background: linear-gradient(black,white);
-    background-attachment: fixed;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .titsec3{
@@ -160,8 +156,8 @@ main section:nth-child(3){
 }
 .div2sec3{
     display: grid;
-    grid-template: 100% / auto auto auto;
-    column-gap: 1.5rem;
+    grid-template: 100% / 33% 33% 33%;
+    justify-content: center;
     grid-column-start: 1;
     grid-row-start: 2;
 }
@@ -178,15 +174,22 @@ main section:nth-child(3){
     grid-column-start: 1;
     grid-row-start: 1;
 }
+.curso1:hover{
+    color:white;
+    background-color: black;
+    padding: 5%;
+    transition: 0.8s;
+}
 .imgcurso1{
     width: 100%;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 .imgcurso1 img{
-    margin-left: 2.6rem;
+    margin-left: 3rem;
     width: 70%;
 }
 .curso1 div:nth-child(2){
+    margin-bottom: 1.5rem;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -197,6 +200,7 @@ main section:nth-child(3){
     justify-content: center;
     align-items: center;
     margin-right: 1.5rem;
+    margin-left: 1.5rem;
     border-radius: 7px;
     margin:3rem;
     background-color: white;
@@ -204,9 +208,15 @@ main section:nth-child(3){
     grid-column-start: 2;
     grid-column-end: 2;
 }
+.curso2:hover{
+    color:white;
+    background-color: black;
+    padding: 5%;
+    transition: 0.8s;
+}
 .imgcurso2{
     width: 100%;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 .imgcurso2 img{
     margin-left: 1rem;
@@ -214,17 +224,37 @@ main section:nth-child(3){
 }
 .curso2 div:nth-child(2){
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 4.5rem;
 }
 .curso3{
     display: flex;
-    flex-flow: column nowrap;
-    margin-right: 1.5rem;
-    margin:3rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1.5rem;
     border-radius: 7px;
-    background-color: tomato;
+    margin:3rem;
+    background-color: white;
+    color: black;
     grid-column-start: 3;
     grid-column-end: 3;
+}
+.curso3:hover{
+    color:white;
+    background-color: black;
+    padding: 5%;
+    transition: 0.8s;
+}
+.imgcurso3{
+    width: 100%;
+    margin-left: 7rem;
+}
+.imgcurso3 img{
+    margin-bottom: 3.3rem;
+    width: 70%;
+}
+.curso3 div:nth-child(2){
+    text-align: center;
 }
 
 
