--- a/index.css
+++ b/index.css
@@ -5,7 +5,9 @@ body{
     margin: 0;
     background-color: black;
 }
-/*todo lo relacionado al header*/
+
+           /*todo lo relacionado al header*/
+
 header{
     z-index: 2;
     display: flex;
@@ -66,10 +68,12 @@ header{
     border:3px solid rgba(251, 253, 253, 0.621);
     transition: 0.5s;
 }
-/*todo lo relacionado al main*/
+
+        /*todo lo relacionado al main*/
+
 main{
     display:grid;
-    grid-template: 300px 900px 600px repeat(2, auto)/auto auto;
+    grid-template: 10% 36.7% 20% 1fr/auto auto;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 3;
@@ -109,7 +113,7 @@ main section:nth-child(1){
 
 main section:nth-child(2){
     display: grid;
-    grid-template: 6% 21% 21% 21% 21%/ 25% 25% 25% 25%;
+    grid-template: 11% 17% 17% 17% 17%/ 25% 25% 25% 25%;
     font-style: italic;
     background-color: none;
     color: white;
@@ -119,8 +123,10 @@ main section:nth-child(2){
     grid-row-end: 3;
 }
 .titsection2{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     overflow: hidden;
-    text-align: center;
+    font-size: 2rem;
+    text-align:center;
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 1;
@@ -435,40 +441,12 @@ main section:nth-child(2){
     padding-inline: 5%;
     border: 3px solid white;
 }
-/*.imgsection2{
-    width: 100%;
-    margin-right:15% ;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
-    border-radius: 5%;
-}
-.textsection2{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-.titsection2{
-    text-align: center;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 1;
-}
-main section:nth-child(2) img:hover{
-    border-top:5px solid white;
-    border-bottom:5px solid white;
-    transition: 0.5s;
-}*/
-
-             /*seccion 3 del main*/
+             
+         /*seccion 3 del main*/
 
 main section:nth-child(3){
     display: grid;
     grid-template: 10% 90%/auto;
-    margin-top: 1%;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 3;
@@ -584,10 +562,22 @@ main section:nth-child(3){
     margin-bottom: 2rem;
     text-align: center;
 }
+        /*Seccion 4 del main*/
+main section:nth-child(4){
+    display: grid;
+    grid-template: 50% 50%/auto;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-top: 5%;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    background-color: antiquewhite;
+}
+.div1sec4{
+    
+}
+       /*Generalidades de los titulos*/
 
-
-
-/*Generalidades de los titulos*/
 .tit{
     text-align: center;
 }
@@ -604,7 +594,8 @@ main section:nth-child(3){
     text-align: center;
 }
 
-/*area de animaciones*/
+          /*area de animaciones*/
+
 @keyframes firstletter{
     0% {
         color: rgb(110, 110, 110);
