--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body{
     display:grid;
-    grid-template: 150px 300px 3000px 150px/repeat(3, auto);
+    grid-template: 150px 300px 2500px 150px/repeat(3, auto);
     gap:0.7rem;
     margin: 0;
-    background-color: black;
+    background-color: #222831;
 }
 
            /*todo lo relacionado al header*/
@@ -73,12 +73,13 @@ header{
 
 main{
     display:grid;
-    grid-template: 10% 36.7% 20% 1fr/auto auto;
+    grid-template: 20% 40% 25%/auto auto;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 3;
     color:white;
     border-radius: 7px;
+    background-color: #222831;
     margin: 0;
     padding: 0;
 }
@@ -86,14 +87,10 @@ main{
              /*seccion 1 del main*/
 
 main section:nth-child(1){
-    height: 70%;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    z-index: 3;
-    background-image: url(pics/classmat.jpg);
-    background-position:center;
+    display: grid;
+    grid-template: 100%/50% 50%;
     grid-column-start: 1;
+    color: white;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
@@ -101,13 +98,25 @@ main section:nth-child(1){
     margin-left: 1rem;
     margin-right: 1rem;
 }
-.textsection1{
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size:large;
-    font-style: italic;
-    padding: 1rem;
+.div1sec1{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 2%;
+    font-size: 110%;
+    grid-column-start:1 ;
+    grid-column-end: 1;
 }
+.div2sec1{
+    padding: 5%;
+    margin-top: 5.7%;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row: 1;
+}
+.div2sec1:hover{
+    margin-top: 3%;
+    transition: 0.9s;
+}
+
 
              /*seccion 2 del main*/
 
@@ -451,7 +460,7 @@ main section:nth-child(3){
     grid-column-end: 3;
     grid-row-start: 3;
     row-gap: 5%;
-    background: linear-gradient(black,white);
+    background: linear-gradient(#222831,white);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .titsec3{
@@ -567,13 +576,14 @@ main section:nth-child(4){
     display: grid;
     grid-template: 50% 50%/auto;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-top: 5%;
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 4;
     background-color: antiquewhite;
 }
 .div1sec4{
+    grid-column-start: 1;
+    grid-row-end: 1;
     
 }
        /*Generalidades de los titulos*/
