--- a/courses.css
+++ b/courses.css
@@ -1,19 +1,19 @@
-body{
-    display:grid;
+body {
+    display: grid;
     grid-template: 150px 0px 4500px /repeat(3, auto);
-    gap:0.7rem;
+    gap: 0.7rem;
     margin: 0;
     background-color: #222831;
 }
 
 
 /*todo lo relacionado al header*/
-header{
+header {
     width: 100%;
-    position:fixed;
+    position: fixed;
     z-index: 2;
     display: flex;
-    flex-flow:column;
+    flex-flow: column;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 1;
@@ -21,20 +21,22 @@ header{
     color: aliceblue;
 }
 
-.parth-1 h1:nth-child(1){
+.parth-1 h1:nth-child(1) {
     text-align: center;
     animation-name: firstletter;
     animation-duration: 8s;
 }
-.parth-1{
+
+.parth-1 {
     justify-content: center;
     align-items: center;
-    display:flex;
+    display: flex;
     flex-grow: 2;
 }
-.parth-2 ul{
-    display:flex;
-    flex-direction:row;
+
+.parth-2 ul {
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -42,40 +44,47 @@ header{
     background-color: none;
 }
 
-.itul a{
-    float:left;
+.itul a {
+    float: left;
     display: block;
-    color:white;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-.itul a:hover{
-    border:1px solid rgba(251, 253, 253, 0.621);
+
+.itul a:hover {
+    border: 1px solid rgba(251, 253, 253, 0.621);
     transition: 0.5s;
 }
-.bgb{
+
+.bgb {
     background-color: rgba(199, 199, 199, 0.2);
 }
 
 /*area de animaciones*/
-@keyframes firstletter{
+@keyframes firstletter {
     0% {
         color: rgb(110, 110, 110);
     }
-    20%{
+
+    20% {
         color: #ff0000de;
     }
-    40%{
+
+    40% {
         color: rgba(255, 0, 221, 0.977);
     }
-    60%{
+
+    60% {
         color: rgba(204, 0, 255, 0.918);
     }
-    80%{
+
+    80% {
         color: #ff0000de;
     }
-    100%{
+
+    100% {
         color: rgb(110, 110, 110);
     }
 }
@@ -172,6 +181,7 @@ main {
     border: 1.5px inset #171717;
     border-radius: 5px;
 }
+
 /*falta imgstyle2 y imgstyle3*/
 
 .namestyle {
@@ -226,7 +236,7 @@ main {
 }
 
 .levelpartinfbutton:hover {
-    color:black;
+    color: black;
     background-color: #DDDDDD;
 }
 
@@ -274,14 +284,14 @@ main {
 .content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 550px 60px 550px 60px 550px 60px;
     padding: 20px;
-    gap: 20px;
+    gap: 30px;
     height: 3000px;
 
 }
 
-.content > div {
+.content>div {
     display: flex;
     flex-direction: column;
 }
@@ -289,16 +299,16 @@ main {
 .descriptiontitle {
     justify-content: center;
     display: flex;
-    height: 8%;
+    height: 12%;
     font-size: 40px;
     font-family: 'Oswald', sans-serif;
-    color: cornflowerblue
+    color: cornflowerblue;
 
 }
 
 .descriptiontext {
     display: flex;
-    height: 12%;
+    height: 18%;
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
     color: #DDDDDD;
@@ -312,26 +322,27 @@ main {
 }
 
 .descriptionlist {
-    height: 30%;
+    height: 48%;
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
     color: #DDDDDD;
 }
 
-.coursebuttoncontainer{
-    margin-right: 50px;
-    margin-left: 50px;
-    margin-top: 20px;
+.buttoncourse {
     display: flex;
+    grid-column: span 2;
+    background-color: #442578;
+    border: 1px outset #442578;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
-    background-color: #30006e;
-    border-radius: 10px;
-
+    right: 50px;
+    width: 25%;
 }
 
-.coursebuttontext {
+.buttontext {
+    text-align: center;
     font-family: 'Oswald', sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     color: #DDDDDD;
 }
