--- a/courses.css
+++ b/courses.css
@@ -102,7 +102,7 @@ header {
 
 main {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 5;
     grid-row-start: 3;
     background-color: #222831;
 }
@@ -122,122 +122,118 @@ main {
     text-align: center;
 }
 
-.coursecontainer {
+.coursescontainer {
     display: grid;
-    grid-template-columns: repeat(3, 400px);
-    grid-template-rows: 450px;
-    background-color: #222831;
-    justify-content: space-around;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-.coursecontainer>div {
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    position: relative;
-}
-
-
-.levelpartsup {
-    display: grid;
-    grid-template-columns: 40% 50%;
-    grid-template-rows: 120px;
-    justify-content: space-around;
-    align-content: center;
-    height: 60%;
-    background-color: #30475E;
-    border-radius: 10px;
-    align-items: center;
-}
-
-.imgstyle1 {
-    background-image: url(pics/derivada.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #DDDDDD;
-    width: 100%;
-    height: 100%;
-    border: 1.5px inset #171717;
-    border-radius: 5px;
-}
-
-.imgstyle2 {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #DDDDDD;
-    width: 100%;
-    height: 100%;
-    border: 1.5px inset #171717;
-    border-radius: 5px;
-}
-
-.imgstyle3 {
-    background-repeat: no-repeat;
-    background-color: #DDDDDD;
-    width: 100%;
-    height: 100%;
-    border: 1.5px inset #171717;
-    border-radius: 5px;
-}
-
-/*falta imgstyle2 y imgstyle3*/
-
-.namestyle {
-    font-family: 'Tilt Warp', cursive;
-    color: #DDDDDD;
-    text-align: center;
-    font-size: 35px;
-}
-
-.levelpartinf {
-    height: 45%;
-    width: 100%;
-    background-color: #F05454;
-    z-index: 1;
-    top: 246px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-}
-
-.levelpartinftitle {
-    padding: 10px;
-    font-size: 27px;
-    font-family: 'Oswald', sans-serif;
-    color: #DDDDDD;
-    text-align: center;
-}
-
-.levelpartinfdescription {
-    padding: 5px;
-    color: #DDDDDD;
-    font-size: 14px;
-    text-align: center;
-}
-
-.levelpartinfbutton {
-    display: flex;
+    grid-template-columns: repeat(3, 500px);
+    grid-template-rows: 600px;
     justify-content: center;
+    column-gap: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: 600px;
+}
+
+.coursescontainer>div {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    background-color: #42474f;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.title1 {
+    display: flex;
+    height: 5%;
+    border: 1px solid #DDDDDD;
+    border-radius: 50px;
     align-items: center;
-    border-radius: 8px;
-    border: 1px outset #373737;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding: 5px;
-    margin-top: 9px;
-    background-color: #373737;
+    justify-content: center;
+    width: 20%;
+    margin-left: 30px;
+    margin-top: 40px;
+}
+
+.title1text {
+    text-align: center;
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
     color: #DDDDDD;
-    transition: 0.5s;
 }
 
-.levelpartinfbutton:hover {
-    color: black;
+.title2 {
+    display: flex;
+    height: 10%;
+    align-items: center;
+    margin: 30px;
+}
+
+.title2text {
+    font-family: 'Tilt Warp', cursive;
+    font-size: 30px;
+    color: #DDDDDD;
+}
+
+.descriptionzone {
+    display: flex;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.descriptionzonetext {
+    color: #DDDDDD;
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+}
+
+.buttonvermas {
+    display: flex;
+    height: 10%;
     background-color: #DDDDDD;
+    border-radius: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-family: 'Konkhmer Sleokchher', cursive;
+    transition: 0.3s
+}
+
+.buttonvermas:hover {
+    background-color: #181818;
+    color: #DDDDDD;
+}
+
+.duration {
+    display: flex;
+    gap: 15px;
+}
+
+.iconclock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    margin-left: 30px;
+    margin-top: 20px;
+    color: #DDDDDD;
+    filter: brightness(0) invert(1);
+}
+
+.cantclases {
+    height: 20px;
+    margin-top: 15px;
+    color: #DDDDDD;
+    font-family: 'Oswald', sans-serif;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background: linear-gradient(to right, #42474f, #ffffff, #42474f);
 }
 
 /*seccion 2 del main*/
@@ -283,68 +279,77 @@ main {
 
 .content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 550px 60px 550px 60px 550px 60px;
+    grid-template-columns: 700px 700px;
+    grid-template-rows: repeat(3, 400px);
     padding: 20px;
-    gap: 30px;
+    column-gap: 10px;
+    row-gap: 100px;
     height: 3000px;
+    background-color: #DDDDDD;
+    justify-content: center;
 
 }
 
 .content>div {
     display: flex;
     flex-direction: column;
+    border-radius: 20px;
 }
 
-.descriptiontitle {
-    justify-content: center;
+.contenedor-imagen {
     display: flex;
-    height: 12%;
-    font-size: 40px;
-    font-family: 'Oswald', sans-serif;
-    color: cornflowerblue;
-
-}
-
-.descriptiontext {
-    display: flex;
-    height: 18%;
-    font-family: 'Oswald', sans-serif;
-    font-size: 20px;
-    color: #DDDDDD;
-}
-
-.titletemary {
-    padding-left: 10px;
-    font-family: 'Oswald', sans-serif;
-    font-size: 35px;
-    color: #DDDDDD;
-}
-
-.descriptionlist {
-    height: 48%;
-    font-family: 'Oswald', sans-serif;
-    font-size: 20px;
-    color: #DDDDDD;
-}
-
-.buttoncourse {
-    display: flex;
-    grid-column: span 2;
-    background-color: #442578;
-    border: 1px outset #442578;
-    border-radius: 10px;
     justify-content: center;
     align-items: center;
-    right: 50px;
-    width: 25%;
 }
 
-.buttontext {
+.contenedor-imagen img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+.contenedor-imagen img:hover {
+    max-width: 100%;
+    max-height: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.infocourse {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: #222831;
+    transition: 0.5s;
+}
+
+.infocourse:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.texto1 {
+    margin-top: 30px;
     text-align: center;
     font-family: 'Oswald', sans-serif;
     font-size: 30px;
     color: #DDDDDD;
+}
+
+.texto2 {
+    margin-left: 20px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 20px;
+    color: #DDDDDD;
+}
+
+.temarylist {
+    display: flex;
+}
+
+.column {
+    font-family: 'Oswald', sans-serif;
+    color: #DDDDDD;
+    font-size: 17px;
 }
 
 /*Area del footer*/
@@ -511,6 +516,7 @@ footer a:active {
     justify-content: center;
     align-items: center;
 }
+
 .bluetext {
     color: blue;
 }
