finalizado el html y el css del formulario

--- a/form.css
+++ b/form.css
@@ -90,6 +90,9 @@ form{
     overflow:hidden;
     position: relative;
 }
+h3{
+    text-align: center;
+}
 .titulo{
     color:#3F4E4F;
     font-weight: 500;
