--- a/Proyecto con puntos de corte/inicio.css
+++ b/Proyecto con puntos de corte/inicio.css
@@ -23,10 +23,22 @@ header .partsheader {
     padding: 15px;
 }
 
-header .titleprincipal {
+.titleprincipal {
     color: #dddddd;
     padding-bottom: 20px;
 }
+
+.titleprincipal span {
+    animation: color-change 10s infinite;
+}
+
+@keyframes color-change {
+    0% { color: red; }
+    25% { color: green; }
+    50% { color: blue; }
+    75% {color: yellow;}
+    100% {color: red;}
+  }
 
 .partsheader nav a {
     text-decoration: none;
@@ -53,20 +65,16 @@ header .titleprincipal {
 }
 
 .containerinicio h1 {
-    text-align: center;
     padding: 20px;
-}
-
-.containerinicio p {
-    padding: 10px;
     text-align: center;
 }
 
 .containerinicio div {
     display: flex;
+    flex-direction: column;
+    padding: 20px;
     justify-content: center;
     align-items: center;
-    padding: 20px;
 }
 
 .containerprincipal {
@@ -317,7 +325,42 @@ header .titleprincipal {
     box-shadow: inset 0 0px 5px rgba(255, 255, 255, 0.8);
 }
 
+.containerfooter {
+    display: flex;
+    height: 100px;
+    background-color: #3F4E4F;
+    align-items: center;
+    font-family: 'Wix Madefor Display', sans-serif;
+    color: #dddddd;
+    padding: 20px;
+}
 
+.containerfooter h2 {
+    padding: 20px;
+    font-size: 26px;
+}
+
+.containerfooter .separador {
+    width: 1px;
+    height: 80%;
+    background-color: #8b8b8b;
+
+}
+
+.containerfooter .redes {
+    display: flex;
+    width: 100%;
+    justify-content: end;
+    align-items: center;
+}
+
+.redes a {
+    margin-left: 30px;
+}
+
+.redes a:last-child {
+    margin-right: 30px;
+}
 
 
 
@@ -350,5 +393,9 @@ header .titleprincipal {
 
     .cartas>div {
         margin-left: 20px;
+    }
+
+    .containerinicio div {
+        flex-direction: row;
     }
 }
