--- a/Proyecto con puntos de corte/cursos.css
+++ b/Proyecto con puntos de corte/cursos.css
@@ -9,26 +9,53 @@ body {
 }
 
 header {
-    font-family: 'Wix Madefor Display', sans-serif;
-    background-color: #3F4E4F;
-    position: fixed;
-    width: 100%;
-}
-
-header .partsheader {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 15px;
+    font-family: 'Wix Madefor Display', sans-serif;
+    background-color: #3F4E4F;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    width: 100%;
 }
 
-header .titleprincipal {
+.titleprincipal {
     color: #dddddd;
     padding-bottom: 20px;
 }
 
-.partsheader nav a {
+.titleprincipal span {
+    animation: color-change 10s infinite;
+}
+
+@keyframes color-change {
+    0% {
+        color: red;
+    }
+
+    25% {
+        color: green;
+    }
+
+    50% {
+        color: blue;
+    }
+
+    75% {
+        color: yellow;
+    }
+
+    100% {
+        color: red;
+    }
+}
+
+nav a {
     text-decoration: none;
     color: #dddddd;
     padding: 10px;
@@ -44,37 +71,37 @@ header .titleprincipal {
     transition: 0.5s;
 }
 
-#intro {
+.containerintro {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin-top: 120px;
+    justify-content: space-evenly;
     align-items: center;
-    text-align: center;
-    height: 75vh;
-    background-color: #222831;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(imagenes/2324350.jpg);
+    background-size: cover;
+    background-position: center center center center;
+    height: 80vh;
 }
 
-#intro .containerintro h1 {
+.containerintro h1 {
     font-family: 'Wix Madefor Display', sans-serif;
-    color: #dddddd;
-    padding: 20px;
-}
-
-#intro .containerintro button {
-    font-family: 'Wix Madefor Display', sans-serif;
-    font-size: 1.2em;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     text-align: center;
-    padding: 10px;
-    border-radius: 7px;
-    background-color: #dddddd;
-    border: 1px solid;
-    transition: 0.2s
+    font-size: 4vw;
 }
 
-#intro .containerintro button:hover {
-    background-color: #171717;
+.containerintro button {
+    font-family: 'Wix Madefor Display', sans-serif;
+    background-color: rebeccapurple;
     color: #dddddd;
-    border: 1px solid #171717;
+    font-size: 2vw;
+    font-weight: bold;
+    padding: 10px;
+    width: 20%;
+    max-width: 400px;
+    border-style: none;
+    border-radius: 10px;
 }
 
 .containercursos {
@@ -118,47 +145,55 @@ header .titleprincipal {
 .test {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    background-color: #222831;
-    font-family: 'Wix Madefor Display', sans-serif;
-    color: #dddddd;
+    height: 500px;
+    padding: 20px;
 }
 
 .test h2 {
-    padding: 20px;
+    font-family: 'Wix Madefor Display', sans-serif;
+    color: #dddddd;
     text-align: center;
-    font-size: 2em;
 }
 
-.test img {
-    height: auto;
-    max-width: 70%;
-    padding: 20px;
+.imgtest {
+    width: 300px;
+    height: 300px;
+    background-image: url(imagenes/test.png);
+    background-size: cover;
 }
 
-.descriptioncontainer {
+.containerdescription {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 500px 0 500px 0 500px 0;
-    background-color: #dddddd;
+    grid-template-rows: auto 0 auto 0 auto 0;
+    row-gap: 20px;
+    height: 1700px;
     padding: 20px;
-    gap: 20px;
+    background-color: #dddddd;
 }
 
 .description {
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    border: 1px solid black;
     background-color: #171717;
+    justify-content: space-around;
+    padding: 20px;
     color: #dddddd;
-    justify-content: space-between;
     font-family: 'Wix Madefor Display', sans-serif;
     border-radius: 10px;
 }
 
-.descriptioncontainer button {
+.listaimagen ul {
+    padding: 20px;
+}
+
+.description h3 {
+    text-align: center;
+}
+
+.description button {
     background: linear-gradient(to right, #00ff75, #00bfff);
     font-family: 'Wix Madefor Display', sans-serif;
     border-radius: 5px;
@@ -167,163 +202,120 @@ header .titleprincipal {
     font-weight: bold;
     color: #171717;
     border-style: none;
-    transition: 0.5s;
 }
 
-.descriptioncontainer h3 {
-    text-align: center;
-}
-
-.descriptioncontainer ul {
-    padding-left: 20px;
-}
-
-.specialcontainer1,
-.specialcontainer2,
-.specialcontainer3 {
+.containerfooter {
     display: flex;
-    height: 60%;
+    height: 100px;
+    background-color: #3F4E4F;
+    align-items: center;
+    font-family: 'Wix Madefor Display', sans-serif;
+    color: #dddddd;
+    padding: 20px;
+}
+
+.containerfooter h2 {
+    padding: 20px;
+    font-size: 26px;
+}
+
+.containerfooter .separador {
+    width: 1px;
+    height: 80%;
+    background-color: #8b8b8b;
+
+}
+
+.containerfooter .redes {
+    display: flex;
+    width: 100%;
+    justify-content: end;
     align-items: center;
 }
 
+.redes a {
+    margin-left: 30px;
+}
+
+.redes a:last-child {
+    margin-right: 30px;
+}
+
+
 /* area de breakpoints */
 
-
-
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 900px) {
     .containercursos {
         flex-direction: row;
-        justify-content: center;
-        align-items: normal;
         height: 800px;
     }
 
     .test {
         flex-direction: row;
-        justify-content: space-around;
     }
 
-    .curso {
-        max-width: 500px;
-    }
-
-    .curso p {
-        font-size: 1.05em;
-    }
-
-    .specialcontainer1 {
+    .listaimagen {
+        display: flex;
         justify-content: space-between;
     }
 
-    .specialcontainer1 div {
-        width: 280px;
-        height: 280px;
+    .image1,
+    .image2,
+    .image3 {
+        width: 200px;
+        height: 200px;
+        background-size: cover;
+        margin-right: 50px;
+    }
+
+    .image1 {
         background-image: url(imagenes/derivada.png);
-        background-size: cover;
-        margin-right: 50px;
-        border-radius: 20px;
-        transition: 0.5s;
-
     }
 
-    .specialcontainer1 div:hover {
-        width: 300px;
-        height: 300px;
-    }
-
-    .specialcontainer2 {
-        justify-content: space-between;
-    }
-
-    .specialcontainer2 div {
-        width: 280px;
-        height: 280px;
+    .image2 {
         background-image: url(imagenes/calculator.png);
-        background-size: cover;
-        margin-right: 50px;
-        border-radius: 20px;
-        transition: 0.5s;
     }
 
-    .specialcontainer2 div:hover {
-        width: 300px;
-        height: 300px;
-    }
-
-    .specialcontainer3 {
-        justify-content: space-between;
-    }
-
-    .specialcontainer3 div {
-        width: 280px;
-        height: 280px;
+    .image3 {
         background-image: url(imagenes/integral.png);
-        background-size: cover;
-        margin-right: 50px;
-        border-radius: 20px;
-        transition: 0.5s;
-    }
-
-    .specialcontainer3 div:hover {
-        width: 300px;
-        height: 300px;
     }
 }
 
-@media screen and (min-width: 1600px) {
-    .descriptioncontainer {
-        display: grid;
-        grid-template-columns: 700px 500px;
-        grid-template-rows: 500px 500px 500px;
-        justify-content: space-around;
+@media screen and (min-width: 1300px) {
+    .containerdescription {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3, auto);
     }
 
-    .specialcontainer1 div,
-    .specialcontainer2 div,
-    .specialcontainer3 div {
+    .image1,
+    .image2,
+    .image3 {
         display: none;
     }
 
-    .imgcontainer1,
-    .imgcontainer2,
-    .imgcontainer3 {
+    .vacio {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 500px;
-        width: 500px;
     }
 
-    .imgcontainer1 div,
-    .imgcontainer2 div,
-    .imgcontainer3 div {
-        height: 400px;
+    .img1,
+    .img2,
+    .img3 {
+        background-size: cover;
         width: 400px;
-        border-radius: 10px;
-        transition: 0.5s;
+        height: 400px;
     }
 
-    .imgcontainer1 div {
+    .img1 {
         background-image: url(imagenes/derivada.png);
-        background-size: cover;
     }
 
-    .imgcontainer2 div {
+    .img2 {
         background-image: url(imagenes/calculator.png);
-        background-size: cover;
     }
 
-    .imgcontainer3 div {
+    .img3 {
         background-image: url(imagenes/integral.png);
-        background-size: cover;
     }
-
-    .imgcontainer1 div:hover,
-    .imgcontainer2 div:hover,
-    .imgcontainer3 div:hover {
-        height: 500px;
-        width: 500px;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    }
-
 }
